# glip-lib

./: .gitignore  GLIPLIB.workspace  LICENSE  README.md
CMakeTools/: FindOpenGLES.cmake
Deprecated/: Devices.cpp  TextureReader.hpp
Doc/Doxygen/: .gitignore  Doxyfile  README.md  doc.doc  doc.hpp  examples.doc  examples.dox  glipExtra.css  header.html  mainPage.dox
Doc/Doxygen/Pages/: emailForm.php  examples.dox  mainPage.dox  page01_GettingStarted.dox  page02_UsingTheLibrary.dox  page03_ExampleColorSpaceProcessing.dox  page04_ExampleSobel.dox  page05_ExampleBilateralFilter.dox  page06_ExampleHistogram.dox  page07_ExampleReduction.dox  page08_ExampleProceduralImageGeneration.dox  page09_ExampleObjectRendering.dox  page0x_GameOfLife.dox  page10_ExampleLucasKanade.dox  page11_ExampleGameOfLife.dox  page12_ToolGlipCompute.dox  page13_ToolGlipStudio.dox  page14_ContactForm.dox  page19_contactForm.dox  toolGlipCompute.dox
Doc/Doxygen/html/: .gitignore
Doc/GenerateModulesDoc/: .gitignore  main.cpp
Examples/DEPRECATED_Histogram/: README.txt
Examples/DEPRECATED_Histogram/src/: header.hpp  main.cpp
Examples/DEPRECATED_Test_Video/src/: main.cpp
Examples/DEPRECATED_VirtualCalc/: VirtualCalc.pro  compileAndRun
Examples/Deprecated.GlipStudio/: GlipStudio.pro
Examples/FFTExample/: .gitignore  Makefile  README_1D.txt  README_2D.txt  compile1D.bat
Examples/GLFWIntegration/: .gitignore  Makefile
Examples/GLFW_Integration/: compile.sh  glfwIntegration
Examples/GlipStudio/: GlipStudio.pro  stylesheet.css
Examples/Histogram/: Histogram  Histogram.pro  compileAndRun  run
Examples/ImageContentInfo/: ImageContentInfo.pro  stylesheet.css
Examples/Test_FFT/: compile.sh  compile1D.sh  compile2D.bat  compile2D.sh
Examples/Test_GLContext/: Makefile  Test_GLContext  Test_GLContext.pro  moc_WindowRendering.cpp
Examples/Test_GOL/: Makefile  Test_GOL  Test_GOL.pro  moc_WindowRendering.cpp  moc_gameOfLife.cpp
Examples/Test_Layouts/: Makefile  Test_Layouts  Test_Layouts.pro
Examples/Test_ShaderSource/: Makefile  Test_ShaderSource  Test_ShaderSource.pro
Examples/Test_Video/: TestVideo.pro
Examples/Test_ffmpeg/: .fuse_hidden0000056200000002  .fuse_hidden00000e9900000005  .fuse_hidden00000fd400000006  Makefile  Test_ffmpeg.pro
Examples/VirtualCalc/: VirtualCalc  extentionsNeeded.list
Examples/tests.Layouts/: Test_Layouts.pro
Examples/tests.ShaderSource/: Test_ShaderSource.pro
GLIP-Lib/: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  compile  compile.sh
GLIP-Lib/include/: GLIPLib.hpp  devDebugTools.hpp  devDebugTools.hpp~
GLIP-Lib/include/Core/: Component.hpp  Component.hpp~  DEPRECATED_Workspace.hpp  DEPR_NamingLayout.hpp.old  Devices.hpp  Devices.hpp~  Exception.hpp  Exception.hpp~  Filter.hpp  Filter.hpp~  Geometry.hpp  HdlDynamicData.hpp  HdlFBO.hpp  HdlFilter.hpp  HdlGeBO.hpp  HdlInfo.hpp  HdlModificator.hpp  HdlPBO.hpp  HdlShader.hpp  HdlTexture.hpp  HdlTexture.hpp~  HdlTextureTools.hpp  HdlVBO.hpp  IOModules.hpp  LibTools.hpp  NamingLayout.hpp  NamingLayout.hpp~  OglInclude.hpp  Pipeline.hpp  Pipeline.hpp~  ShaderSource.hpp  ShaderSource.hpp~  StreamManager.hpp  glew.h  glxew.h
GLIP-Lib/include/Modules/: FFT.hpp  FFT1D.hpp  FFT2D.hpp  GeometryLoader.hpp  HdlCamera.hpp  ImageBuffer.hpp  LayoutLoader.hpp  LayoutLoader.hpp~  LayoutLoaderModules.hpp  Modules.hpp  Modules.hpp~  ProceduralInput.hpp  ProceduralInput.hpp~  TextureReader.hpp  TextureReader.hpp~  UniformsLoader.hpp  UniformsVarsLoader.hpp  UniformsVarsLoader.hpp~  VanillaParser.hpp  VanillaParser.hpp~
GLIP-Lib/src/Core/: Component.cpp  Component.cpp~  DEPRECATED_Workspace.cpp  Devices.cpp  Devices.cpp~  Exception.cpp  Exception.cpp~  Filter.cpp  Filter.cpp~  Geometry.cpp  Geometry.cpp~  HdlDynamicData.cpp  HdlFBO.cpp  HdlFilter.cpp  HdlGeBO.cpp  HdlInfo.cpp  HdlModificator.cpp  HdlPBO.cpp  HdlShader.cpp  HdlShader.cpp~  HdlTexture.cpp  HdlTexture.cpp~  HdlTextureTools.cpp  HdlVBO.cpp  HdlVBO.cpp~  IOModules.cpp  NamingLayout.cpp  OglTools.cpp  Pipeline.cpp  Pipeline.cpp~  ShaderSource.cpp  ShaderSource.cpp~  StreamManager.cpp  glew.c
GLIP-Lib/src/Modules/: FFT.cpp  FFT1D.cpp  FFT1D.cpp~  FFT2D.cpp  FFT2D.cpp~  GeometryLoader.cpp  ImageBuffer.cpp  LayoutLoader.cpp  LayoutLoader.cpp~  LayoutLoaderModules.cpp  ProceduralInput.cpp  ProceduralInput.cpp~  TextureReader.cpp  TextureReader.cpp~  UniformsLoader.cpp  UniformsVarsLoader.cpp  UniformsVarsLoader.cpp~  VanillaParser.cpp  VanillaParser.cpp~
GLIP-Lib/src/Modules/Cameras/: Cameras_Unicap2.cpp.DEPRECATED  Cameras_Unicap2.hpp.DEPRECATED  Cameras_Unicap2_Tools.cpp.DEPRECATED
Project_CB/: CameraPipeline.cbp  CameraPipeline.layout  GLIP-LIB.cbp  GLIP-LIB.layout  Histogram.cbp  Histogram.layout  ImageContentInfo.cbp  ImageContentInfo.layout  Test_GLContext.cbp  Test_GLContext.cbp.cbTemp  Test_GLContext.layout  Test_GOL.cbp  Test_GOL.layout  Test_Layout.cbp  Test_Layout.layout  Test_ShaderSource.cbp  Test_ShaderSource.layout  Test_Video.cbp  VisualGLIP.cbp  VisualGLIP.layout
Project_VS/GLIP-Lib/: GLIP-Lib.sln
TODO_files/: TODO.txt  cameraConnection.sh  firewire_fix_linux  rootCameraConnection.sh
Tools/Filters/: Canny.ppl  FFT1D.ppl  FFT2D.ppl  RayMarcherTest.ppl  RayMarcherUtils.ppl  Sobel.ppl  applyCurve.ppl  bilateral.ppl  changeHSV.ppl  colors.ppl  curveEditor.ppl  distortionCorrection.ppl  drawEllipse.ppl  gaussianBlur.ppl  gaussianBlurSeparable.ppl  gaussianLightBrush.ppl  gaussianLightBrushContinuous.ppl  glipLogo.ppl  histogram.ppl  inversionBrush.ppl  inversionBrushContinuous.ppl  maths.ppl  plotHistogram.ppl  printNumber.ppl  rayTracerTest.ppl  showTeapot.ppl  simpleDrawCircle.ppl  writeColor.ppl
Tools/GlipCompute/: .gitignore  CMakeLists.txt  README.md
Tools/GlipCompute/src/: CreateWindowlessContext.cpp  CreateWindowlessContext.hpp  DeviceMemoryManager.cpp  DeviceMemoryManager.hpp  FreeImagePlusInterface.cpp  FreeImagePlusInterface.hpp  GlipCompute.cpp  GlipCompute.hpp  main.cpp
Tools/GlipFilterVideo/: CMakeLists.txt  README.md
Tools/GlipStudio/: .gitignore  GlipStudio.pro  README.md  stylesheet.css
(+277 files in other folders)
